fixed issue with multiple types of the same loot not showing up

--- a/src/pick-up-stix.css
+++ b/src/pick-up-stix.css
@@ -151,8 +151,8 @@ ul.currency-list li.item-controls {
   border-bottom: 2px groove #eeede0;
 }
 
-.dnd5e.sheet.actor .currency-list input[type="text"].isNotGM:focus,
-.dnd5e.sheet.actor .currency-list input[type="text"].isNotGM:hover {
+.dnd5e.sheet.actor input[type="text"].isNotGM:focus,
+.dnd5e.sheet.actor input[type="text"].isNotGM:hover {
   box-shadow: unset;
   border: unset;
   border-bottom: 2px groove #eeede0;
